<?xml version="1.0"?>
<package>
  <name>open_manipulator_libs</name>
  <version>0.0.0</version>
  <description>The open_manipulator_libs package</description>

  <maintainer email="yhna@robotis.com">yhna</maintainer>
  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>robotis_manipulator</build_depend>
  <build_depend>dynamixel_workbench</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>robotis_manipulator</run_depend>
  <run_depend>dynamixel_workbench</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
