<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_libs</name>
  <version>2.0.2</version>
  <description>
    OpenManipulator library (Kinematics lib., Dynamixel lib., Drawing path lib.)
  </description>
  <license>Apache 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_libs</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>robotis_manipulator</buildtool_depend>
  <depend>cmake_modules</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>eigen</depend>
  <depend>robotis_manipulator</depend>
  <depend>roscpp</depend>
</package>
