################################################################################
# CMake
################################################################################
cmake_minimum_required(VERSION 2.8.3)
project(open_manipulator_msgs)

################################################################################
# Packages
################################################################################
find_package(catkin REQUIRED
  message_generation
  geometry_msgs
  sensor_msgs
  std_msgs
)

################################################################################
# Declare ROS messages, services and actions
################################################################################
 add_message_files(
   FILES
   JointPose.msg
   KinematicsPose.msg
 )

 add_service_files(
   FILES
   GetJointPose.srv
   GetKinematicsPose.srv
 )

generate_messages(
  DEPENDENCIES
  std_msgs
  geometry_msgs
)

################################################################################
# Declare ROS dynamic reconfigure parameters
################################################################################

################################################################################
# Catkin specific configuration
################################################################################
catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES open_manipulator_msgs
  CATKIN_DEPENDS std_msgs
#  DEPENDS system_lib
)

################################################################################
# Build
################################################################################
include_directories(
  ${catkin_INCLUDE_DIRS}
)

################################################################################
# Install
################################################################################

################################################################################
# Test
################################################################################
